--- a/app/views/authorities/edit.html.erb
+++ b/app/views/authorities/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Authority</h1>
-
 <%= render 'form' %>
-
-<%= link_to 'Show', @authority %> |
-<%= link_to 'Back', authorities_path %>
+<div class="row">
+  <%= link_to 'Back', authorities_path, class: "label-back" %>
+</div>
