--- a/app/views/contacts/_view.html.erb
+++ b/app/views/contacts/_view.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div class="text-center">
-  <%= link_to 'Edit', [:edit, @authority, contact], class: "btn btn-default" %>
+  <%= link_to 'Edit', [:edit, @authority, contact], class: "btn btn-warning" %>
   <%= link_to 'Delete', [@authority, contact], class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 
