--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -1,6 +1,6 @@
-<div class='col-sm-4 col-md-3 col-xs-6 text-center'>
+<div class="col-md-3 col-sm-6 text-center">
     <%= link_to [@authority, paper] do%>
       <%= content_tag :h5, "#{paper.title}", class: "shadow"%>
-      <%= image_tag url_for(:controller => "photos", :action => "show_paper", :paper_id=>paper.id)%>
+      <%= image_tag url_for(:controller => "photos", :action => "show_paper", :paper_id=>paper.id), class: "img-rounded"%>
     <% end %>
 </div>
