--- a/app/views/projects/_view.html.erb
+++ b/app/views/projects/_view.html.erb
@@ -11,13 +11,13 @@
   <% project.teams.each do |c|%>
   <div class="col-md-3">
    <%= content_tag :h5, "#{c.title+' '+c.name+' '+c.surname}" %>
-  <%= link_to "Delete", authority_project_pteams_path(@authority, project, c), class: "label-edit", method: :delete %>
+  <%= link_to "Delete", authority_project_pteams_path(@authority, project, c), class: "btn btn-danger", method: :delete %>
   </div>
   <% end%>
 </div>
 
 <div class="text-center">
-  <%= link_to 'Edit', [:edit, @authority, project], class: "btn btn-default"%>
+  <%= link_to 'Edit', [:edit, @authority, project], class: "btn btn-warning"%>
   <%= link_to 'Delete', [@authority, project], class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 <hr>
