--- a/app/views/team_contacts/_formedit.html.erb
+++ b/app/views/team_contacts/_formedit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for ([@authority, @contact]), :html => { :multipart => true } do |f| %>
+<%= form_for @contact, :url => contactedit_teams_path, :html => { :multipart => true } do |f| %>
   <% if @contact.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
@@ -39,6 +39,6 @@
     <hr>
 
   <div class="actions">
-    <%= f.submit "Save", class: "btn btn-primary" %>
+    <%= f.submit "Submit" %>
   </div>
 <% end %>
