standalone photo index, new and create

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag url_for(:controller => "photos", :action => "show", :id=>@photo.id, class: "col-md-3 img-thumbnail"%>
+<div>
+<%= image_tag url_for(:controller => "photos", :action => "show", class: "col-md-3 img-thumbnail"%>
+</div>
