--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for (@photo), :html => { :multipart => true } do |f| %>
+<%= form_for @photo, :url => photos_new_path, :html => { :multipart => true } do |f| %>
   <% if @photo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@photo.errors.count, "error") %> prohibited this paper from being saved:</h2>
