--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Photos#index</h1>
-<p>Find me in app/views/photos/index.html.erb</p>
+<% @photos.each do |photo|%>
+    <% if photo.authority_id.nil? and photo.project_id.nil? and photo.paper_id.nil? %>
+      <%= image_tag url_for(:controller => "photos", :action => "show", :id=>photo.id), class: "col-md-6"%>
+    <% end%>
+<% end%>
