--- a/app/views/teams/view.html.erb
+++ b/app/views/teams/view.html.erb
@@ -2,7 +2,7 @@
 
     <% @team.each do |team| %>
     <div class='row'>
-        <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>team.id)%>
+        <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>team.id), class: "col-md-3"%>
         <%= content_tag :h5, "#{team.title} #{team.name} #{team.surname}", class: "col-md-9 text-justify"%>
         <%= content_tag :h5, "#{team.about}", class: "col-md-9 text-justify"%>
 
