--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -17,6 +17,7 @@
         <li><%= link_to "Contact", "/#cnts"%></li>
         <li><%= link_to "Teams' members", teams_path%></li>
 
+        <% if session[:editor_id] %>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Data edit
             <span class="caret"></span></a>
@@ -26,9 +27,13 @@
             <li><%= link_to "Teams edit", view_teams_path%></li>
           </ul>
         </li>
+        <% end %>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <% if session[:editor_id] %>
+          <li><a href="<%= logout_path%>"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <% end %>
       </ul>
     </div>
   </div>
