--- a/app/views/layouts/_carousel_photos.html.erb
+++ b/app/views/layouts/_carousel_photos.html.erb
@@ -9,7 +9,7 @@
   <div class="carousel-inner">
 
     <% @photos.each_with_index do |photo, index|%>
-    <% if photo.authority_id.nil? and photo.project_id.nil? and photo.paper_id.nil? %>
+    <% if photo.authority_id.nil? and photo.project_id.nil? and photo.paper_id.nil? and (photo.teams.length == 0)%>
     <div class="item <%= 'active' if index == 0%>">
       <%= image_tag url_for(:controller => "photos", :action => "show", :id=>photo.id)%>
       <ol class="carousel-caption">
