--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -23,8 +23,8 @@
             <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Main page", authority_path(Authority.first)%></li>
-            <li><%= link_to "Add photo", photos_new_path%></li>
-            <li><%= link_to "Teams edit", view_teams_path%></li>
+            <li><%= link_to "Photos", photos_index_path%></li>
+            <li><%= link_to "Teams", view_teams_path%></li>
           </ul>
         </li>
         <% end %>
