--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,3 +1,3 @@
 <h2>New contact</h2>
 <%= render 'form' %>
-<%= link_to 'Back', photos_index_path %>
+<%= link_to 'Back', photos_index_path, class: "label-back" %>
