--- a/app/views/teams/view.html.erb
+++ b/app/views/teams/view.html.erb
@@ -21,3 +21,4 @@
 
     <% end %>
     <%= link_to 'Add new team member', new_team_path, class: "btn btn-primary" %>
+    <%= link_to 'Back', authorities_path, class: "label-back" %>
