--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -15,7 +15,7 @@
         <li><%= link_to "Papers", "/#ppr"%></li>
         <li><%= link_to "Photos", "/#phts"%></li>
         <li><%= link_to "Contact", "/#cnts"%></li>
-        <li><%= link_to "Teams' members", teams_path%></li>
+        <li><%= link_to "Team", teams_path%></li>
 
         <% if session[:editor_id] %>
         <li class="dropdown">
