--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 }
 
 body {
-  background-image: url('/assets/spinner.svg');
+  // background-image: url('/assets/spinner.svg');
   background-repeat: repeat;
   color: black;
 }
