--- a/app/views/authorities/_form.html.erb
+++ b/app/views/authorities/_form.html.erb
@@ -27,10 +27,12 @@
     <%= f.label :position %><br>
     <%= f.text_field :position %>
   </div>
+
   <div class="field">
     <%= f.label :about %><br>
-    <%= f.text_area :about %>
+    <%= f.cktext_area :about, cols: 40, ckeditor: { uiColor: '#AADC6E', toolbar: 'medium' } %>
   </div>
+
   <div class="field">
     <%= f.label :dob %><br>
     <%= f.date_select :dob, :order => [:day, :month, :year], :start_year => Date.today.year - 50, :end_year => Date.today.year - 18 %>
