--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -1,10 +1,14 @@
 <p id="notice"><%= notice %></p>
 
     <div class='row animated bounceInDown'>
-      <%= image_tag url_for(:controller => "photos", :action => "show_authority", :authority_id=>@authority.id, :id=>@authority.photos[0][:id]), class: "col-md-3 img-thumbnail"%>
-      <%= simple_format(content_tag :h5, "#{@authority.about}", class:"col-md-9 text-justify")%>
-      <%= content_tag :h2, "#{@authority.title} #{@authority.name} #{@authority.surname}", class: "col-md-12 shadow"%>
+      <%= image_tag url_for(:controller => "photos", :action => "show_authority", :authority_id=>@authority.id, :id=>@authority.photos[0][:id]), class: "col-md-2"%>
+      <div class="col-md-10">
+      <%= content_tag :h3, "#{@authority.title} #{@authority.name} #{@authority.surname}", class: "col-md-12 shadow"%>
       <%= content_tag :h5, "#{@authority.position}", class:"col-md-12"%>
+      </div>
+      <div class="col-md-12 text-justify">
+        <%= simple_format("#{@authority.about}")%>
+      </div>
     </div>
 
     <hr id="prj">
