--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -24,7 +24,7 @@
           <ul class="dropdown-menu">
             <li><%= link_to "Main page", authority_path(Authority.first)%></li>
             <li><%= link_to "Photos", photos_index_path%></li>
-            <li><%= link_to "Teams", view_teams_path%></li>
+            <li><%= link_to "Team", view_teams_path%></li>
           </ul>
         </li>
         <% end %>
