--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="field">
     <%= f.label :about %><br>
-    <%= f.text_area :about %>
+    <%= f.cktext_area :about, ckeditor: { uiColor: '#AADC6E', toolbar: 'medium' } %>
   </div>
   <div class="field">
     <%= f.label :started %><br>
