--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="form-group">
     <%= f.label "About" %><br>
-    <%= f.text_area :about %>
+    <%= f.cktext_area :about, ckeditor: { uiColor: '#AADC6E', toolbar: 'medium' } %>
   </div>
   <div class="form-group">
     <%= f.label "DOB" %><br>
