--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,11 +1,13 @@
 <div class='team row'>
     <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>@team.id), class: "col-md-3"%>
     <%= content_tag :h4, "#{@team.title} #{@team.name} #{@team.surname}", class: "col-md-9 text-justify"%>
-    <%= content_tag :h5, "#{@team.about}", class: "col-md-9 text-justify"%>
+    <div class="col-md-12 text-justify">
+      <%= simple_format("#{@team.about}", class: "col-md-9 text-justify")%>
+    </div>
     <%= content_tag :h4, "Project participation:", class: "col-md-12 text-justify"%>
-    <%= content_tag :h5, "#{@team.projects.map {|k| k.title}.join(', ')}", class: "col-md-12" %>
+    <%= content_tag :h5, "#{@team.projects.map {|k| k.title}.join("\n\n")}", class: "col-md-12" %>
     <%= content_tag :h4, "Papers participation:", class: "col-md-12 text-justify"%>
-    <%= content_tag :h5, "#{@team.papers.map {|k| k.title}.join(', ')}", class: "col-md-12" %>
+    <%= simple_format(content_tag :h5, "#{@team.papers.map {|k| k.title}.join("\n\n")}", class: "col-md-12") %>
     <%= content_tag :h4, "Contacts:", class: "col-md-12 text-justify"%>
     <%= content_tag :h5, "#{@team.contacts.map {|k| k.country}.join(', ')}", class: "col-md-12" %>
     <div>
