some css changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,13 @@ body {
   color: black;
 }
 
+.withback {
+  background-image: url("/assets/Molecular-1.png");
+  background-size: 1550px auto;
+  // background-repeat: no-repeat;
+  // background-position: top right;
+}
+
 body p {
   color: black;
 }
