--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-  <body>
+  <body class="withback">
     <%= render 'layouts/menu'%>
 
     <div class="container">
