--- a/app/views/layouts/_carousel_photos.html.erb
+++ b/app/views/layouts/_carousel_photos.html.erb
@@ -15,7 +15,7 @@
     <div class="item <%= 'active' if index == 0%>">
       <%= image_tag url_for(:controller => "photos", :action => "show", :id=>photo.id), class: "img-fit"%>
       <ol class="carousel-caption">
-        <%= content_tag :h4, "#{photo.description}"%>
+        <!-- content_tag :h4, "#{photo.description}" -->
       </ol>
     </div>
       <% end%>
