--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,15 @@
 <div class="footer text-center">
-  <h4>Dr. Jell's Labs <span class="glyphicon glyphicon-copyright-mark"></span></h4>
-  <div class="col-md-4 col-sm-4 col-xs-12">
-        <hr>
-        <li><%= link_to "Projects", "/#prj"%></li>
-        <li><%= link_to "Papers", "/#ppr"%></li>
-        <li><%= link_to "Photos", "/#phts"%></li>
-  </div>
-  <div class="col-md-4 col-sm-4 col-xs-12">
+ <div class="col-md-offset-3 col-sm-offset-3 col-md-3 col-sm-3 col-xs-12">
+    <h5><%= link_to "Projects", "/#prj"%></h5>
+    <h5><%= link_to "Papers", "/#ppr"%></h5>
+    <h5><%= link_to "Photos", "/#phts"%></h5>
     <hr>
   </div>
-  <div class="col-md-4 col-sm-4 col-xs-12">
+  <div class="col-md-3 col-sm-3 col-xs-12">
+    <h5><%= link_to "Contact", "/#cnts"%></h5>
     <hr>
-    <li><%= link_to "Contact", "/#cnts"%></li>
+  </div>
+  <div class="col-md-12 col-sm-12 col-xs-12">
+    <h4>Dr. Jell's Labs <span class="glyphicon glyphicon-copyright-mark"></span></h4>
   </div>
 </div>
