--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -221,3 +221,23 @@ width: 90%;
   width: 90%;
   height: auto;
 }
+
+#prj {
+  background-color: lightsteelblue;
+  }
+
+#ppr {
+  background-color: lightblue;
+}
+
+#cnts {
+  background-color: lightslategray;
+}
+
+#cnts div span, span, div span a {
+  color: white;
+}
+
+#phts {
+  background-color: lightslategray;
+}
