--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,6 +10,6 @@
     <hr>
   </div>
   <div class="col-md-12 col-sm-12 col-xs-12">
-    <h4>Dr. Jell's Labs <span class="glyphicon glyphicon-copyright-mark"></span></h4>
+    <h4>Dr. Jell's Lab <span class="glyphicon glyphicon-copyright-mark"></span></h4>
   </div>
 </div>
