--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-  <body class="withback">
+  <body  data-spy="scroll" data-target=".navbar" data-offset="50" class="withback">
     <%= render 'layouts/menu'%>
 
     <div class="container">
