--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-3 col-sm-6 text-center">
     <%= link_to [@authority, paper] do%>
-      <%= content_tag :h5, "#{paper.title}", class: "shadow"%>
+      <%= content_tag :h5, "#{paper.title}"%>
       <%= image_tag url_for(:controller => "photos", :action => "show_paper", :paper_id=>paper.id), class: "img-fit img-rounded"%>
     <% end %>
 </div>
