--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,7 +5,7 @@
     <div class='col-sm-2 col-md-3 col-xs-12 text-center'>
         <%= link_to [team] do%>
         <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>team.id), class: "col-md-6"%>
-        <%= content_tag :h5, "#{team.title} #{team.name} #{team.surname}", class: "shadow"%>
+        <%= content_tag :h5, "#{team.title} #{team.name} #{team.surname}"%>
         <% end%>
     </div>
       <% end %>
