--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@ body {
   background-size: 1550px auto;
   // background-repeat: no-repeat;
   // background-position: top right;
+  color: black;
 }
 
 body p {
@@ -223,7 +224,7 @@ width: 90%;
 }
 
 #prj {
-  background-color: lightsteelblue;
+  background-color: lightgrey;
   }
 
 #ppr {
