--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -30,6 +30,12 @@
         <% end %>
       </ul>
 
+      <%= form_tag(search_path, :method => "get", id: "search-form", class: "navbar-form navbar-right") do %>
+      <%= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>
+      <%= submit_tag "Search", class: "btn btn-default" %>
+      <% end %>
+
+
       <ul class="nav navbar-nav navbar-right">
         <% if session[:editor_id] %>
           <li><a href="<%= logout_path%>"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
