--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -27,6 +27,11 @@
     <%= f.date_select :finished, :order => [:day, :month, :year], :start_year => Date.today.year + 1, :end_year => Date.today.year+10 %>
   </div>
 
+  <div class="field">
+    <%= f.label :url %><br>
+    <%= f.text_field :url %>
+  </div>
+
   <div class="row">
   <%= f.fields_for :photos, @project.photos do |ff| %>
     <% if (ff.object).present? %>
@@ -63,7 +68,7 @@
 
   <div class="field">
   <%= f.label "Choose team member" %><br>
-  <%= f.collection_select 'team_ids', Team.all, :id, :name_with_initial %>
+  <%= f.collection_select 'team_ids', Team.all, :id, :name_with_initial, :include_blank => true %>
   </div>
 
   <div class="actions">
